--- a/Project SE/ui/add_new_userscreen.ui
+++ b/Project SE/ui/add_new_userscreen.ui
@@ -82,19 +82,20 @@ color: rgb(255, 0, 0);</string>
     <property name="styleSheet">
      <string notr="true">QPushButton{
 	color: #FFFFFF;
-    background-color: #FB9722;
-    border: 1px solid #888888;
+    background-color: #F84A4A;
+   border: 1px solid #000000;
     border-radius: 20px;
 	font-family: 'Inter';
     font-size: 22px;
     font-weight: 500;
 }
 QPushButton:hover {
-	background-color: rgb(255, 167, 25);
+	
+	background-color: rgb(255, 85, 73);
 }
 
 QPushButton:pressed {
- 	background-color: #FB9722;
+ 	background-color: #F84A4A;
 }</string>
     </property>
     <property name="text">
@@ -114,7 +115,7 @@ QPushButton:pressed {
      <string notr="true">QPushButton{
 	color: #FFFFFF;
     background-color: #009B19;
-    border: 1px solid #888888;
+    border: 1px solid #000000;
     border-radius: 20px;
 	font-family: 'Roboto';
     font-size: 21px;
