--- a/Project SE/ui/admin_cashierscreen.ui
+++ b/Project SE/ui/admin_cashierscreen.ui
@@ -572,41 +572,10 @@ background-color: rgba(255, 167, 25, 0.1);
      <string/>
     </property>
    </widget>
-   <widget class="QPushButton" name="voidbtn">
-    <property name="geometry">
-     <rect>
-      <x>710</x>
-      <y>680</y>
-      <width>151</width>
-      <height>41</height>
-     </rect>
-    </property>
-    <property name="styleSheet">
-     <string notr="true">QPushButton{
-	color: #FFFFFF;
-    background-color: #FB9722;
-    border: 1px solid #888888;
-    border-radius: 20px;
-	font-family: 'Inter';
-    font-size: 17px;
-    font-weight: 400;
-}
-QPushButton:hover {
-	background-color: rgb(255, 167, 25);
-}
-
-QPushButton:pressed {
- 	background-color: #FB9722;
-}</string>
-    </property>
-    <property name="text">
-     <string>Void</string>
-    </property>
-   </widget>
    <widget class="QLabel" name="title_3">
     <property name="geometry">
      <rect>
-      <x>1</x>
+      <x>-1</x>
       <y>11</y>
       <width>1201</width>
       <height>71</height>
@@ -642,8 +611,31 @@ color: rgba(0, 0, 0, 100);
       <height>421</height>
      </rect>
     </property>
+    <property name="styleSheet">
+     <string notr="true">::item:hover {
+    background-color: #FB9722; 
+}
+QTableWidget#tableWidget2 QHeaderView::section {
+	font-family: 'Inter';
+	font-size: 12px;
+	font-weight: bold;
+	background-color: #FB9722; 
+	color: black; 
+	padding-left: 5px;
+}       
+</string>
+    </property>
     <attribute name="horizontalHeaderStretchLastSection">
      <bool>true</bool>
+    </attribute>
+    <attribute name="verticalHeaderVisible">
+     <bool>false</bool>
+    </attribute>
+    <attribute name="verticalHeaderCascadingSectionResizes">
+     <bool>false</bool>
+    </attribute>
+    <attribute name="verticalHeaderHighlightSections">
+     <bool>false</bool>
     </attribute>
     <column>
      <property name="text">
@@ -1122,6 +1114,20 @@ background-color: rgba(255, 167, 25, 0.1);
       <height>441</height>
      </rect>
     </property>
+    <property name="styleSheet">
+     <string notr="true">::item:hover {
+    background-color: #FB9722; 
+}
+QTableWidget#tableWidget QHeaderView::section {
+	font-family: 'Inter';
+	font-size: 18px;
+	font-weight: bold;
+	background-color: #FB9722; 
+	color: black; 
+	padding-left: 5px;
+}       
+</string>
+    </property>
     <property name="frameShape">
      <enum>QFrame::WinPanel</enum>
     </property>
@@ -1138,10 +1144,19 @@ background-color: rgba(255, 167, 25, 0.1);
      <number>1</number>
     </property>
     <property name="editTriggers">
-     <set>QAbstractItemView::SelectedClicked</set>
+     <set>QAbstractItemView::NoEditTriggers</set>
     </property>
     <property name="alternatingRowColors">
      <bool>true</bool>
+    </property>
+    <property name="selectionMode">
+     <enum>QAbstractItemView::SingleSelection</enum>
+    </property>
+    <property name="selectionBehavior">
+     <enum>QAbstractItemView::SelectRows</enum>
+    </property>
+    <property name="textElideMode">
+     <enum>Qt::ElideMiddle</enum>
     </property>
     <property name="showGrid">
      <bool>true</bool>
@@ -1152,6 +1167,9 @@ background-color: rgba(255, 167, 25, 0.1);
     <property name="sortingEnabled">
      <bool>false</bool>
     </property>
+    <attribute name="horizontalHeaderVisible">
+     <bool>true</bool>
+    </attribute>
     <attribute name="horizontalHeaderCascadingSectionResizes">
      <bool>true</bool>
     </attribute>
@@ -1162,6 +1180,9 @@ background-color: rgba(255, 167, 25, 0.1);
      <number>100</number>
     </attribute>
     <attribute name="horizontalHeaderHighlightSections">
+     <bool>false</bool>
+    </attribute>
+    <attribute name="horizontalHeaderShowSortIndicator" stdset="0">
      <bool>false</bool>
     </attribute>
     <attribute name="horizontalHeaderStretchLastSection">
@@ -1181,6 +1202,79 @@ background-color: rgba(255, 167, 25, 0.1);
      </property>
     </column>
    </widget>
+   <widget class="QLineEdit" name="tendered_field">
+    <property name="geometry">
+     <rect>
+      <x>1050</x>
+      <y>660</y>
+      <width>141</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QLineEdit#userfield {
+	padding-left: 10px;
+    border-radius: 10px;
+    border: 1.5px solid rgb(0, 0, 0);  
+    background-color: rgba(255, 255, 255, 240);
+    font-family: 'Roboto';
+	font-size: 13px;
+	font-weight: 400;
+}
+</string>
+    </property>
+    <property name="placeholderText">
+     <string>Enter Value</string>
+    </property>
+    <property name="cursorMoveStyle">
+     <enum>Qt::LogicalMoveStyle</enum>
+    </property>
+    <property name="clearButtonEnabled">
+     <bool>true</bool>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label">
+    <property name="geometry">
+     <rect>
+      <x>1110</x>
+      <y>610</y>
+      <width>81</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>TextLabel</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_3">
+    <property name="geometry">
+     <rect>
+      <x>1110</x>
+      <y>680</y>
+      <width>61</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>TextLabel</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="imgplaceholder">
+    <property name="geometry">
+     <rect>
+      <x>730</x>
+      <y>520</y>
+      <width>151</width>
+      <height>161</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+    <property name="scaledContents">
+     <bool>true</bool>
+    </property>
+   </widget>
    <zorder>whitebg</zorder>
    <zorder>whitebg_10</zorder>
    <zorder>sidebar</zorder>
@@ -1199,7 +1293,6 @@ background-color: rgba(255, 167, 25, 0.1);
    <zorder>label_2</zorder>
    <zorder>menuIcon</zorder>
    <zorder>menubtn</zorder>
-   <zorder>voidbtn</zorder>
    <zorder>title_3</zorder>
    <zorder>title</zorder>
    <zorder>tableWidget2</zorder>
@@ -1218,6 +1311,10 @@ background-color: rgba(255, 167, 25, 0.1);
    <zorder>beveragesbtn</zorder>
    <zorder>extrasbtn</zorder>
    <zorder>tableWidget</zorder>
+   <zorder>tendered_field</zorder>
+   <zorder>label</zorder>
+   <zorder>label_3</zorder>
+   <zorder>imgplaceholder</zorder>
   </widget>
  </widget>
  <resources>
