--- a/Project SE/ui/adminprofilescreen.ui
+++ b/Project SE/ui/adminprofilescreen.ui
@@ -94,7 +94,7 @@ border-radius: 5px;  </string>
      <string notr="true">QLabel#title{
 	color: #FB9722;
     font-family: Sacramento;
-    font-size: 52px;
+    font-size: 58px;
     font-weight: 400;
     padding-bottom: 5px;
     text-align: center;
@@ -123,7 +123,7 @@ border-radius: 5px;  </string>
      <string notr="true">QLabel#settings{
     color: #000000;
     font-family: 'Roboto';
-    font-size: 22px;
+    font-size: 23px;
     font-weight: 500;
 }</string>
     </property>
@@ -255,42 +255,20 @@ background-color: rgba(255, 167, 25, 0.1);
      <string>Users Profile</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="editbtn">
+   <widget class="QLabel" name="myprofile">
     <property name="geometry">
      <rect>
-      <x>1030</x>
-      <y>120</y>
-      <width>51</width>
-      <height>41</height>
-     </rect>
-    </property>
-    <property name="styleSheet">
-     <string notr="true">border:none;</string>
-    </property>
-    <property name="text">
-     <string/>
-    </property>
-    <property name="iconSize">
-     <size>
-      <width>35</width>
-      <height>35</height>
-     </size>
-    </property>
-   </widget>
-   <widget class="QLabel" name="settings_2">
-    <property name="geometry">
-     <rect>
-      <x>380</x>
+      <x>470</x>
       <y>110</y>
-      <width>161</width>
-      <height>51</height>
+      <width>171</width>
+      <height>41</height>
      </rect>
     </property>
     <property name="styleSheet">
      <string notr="true">QLabel{
     color: #000000;
-    font-family: 'Roboto';
-    font-size: 28px;
+    font-family: 'Inter';
+    font-size: 34px;
     font-weight: bold;
 }</string>
     </property>
@@ -304,8 +282,8 @@ background-color: rgba(255, 167, 25, 0.1);
    <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
-      <x>720</x>
-      <y>200</y>
+      <x>460</x>
+      <y>265</y>
       <width>51</width>
       <height>21</height>
      </rect>
@@ -314,9 +292,8 @@ background-color: rgba(255, 167, 25, 0.1);
      <string notr="true">QLabel{
     color: #000000;
     font-family: &quot;Inter&quot;;
-    font-size: 14px;
+    font-size: 16px;
     font-weight: 500;
-
 }</string>
     </property>
     <property name="text">
@@ -378,9 +355,9 @@ QPushButton:hover{text-decoration: underline;}</string>
    <widget class="QLabel" name="label_2">
     <property name="geometry">
      <rect>
-      <x>720</x>
-      <y>230</y>
-      <width>51</width>
+      <x>800</x>
+      <y>265</y>
+      <width>61</width>
       <height>21</height>
      </rect>
     </property>
@@ -388,7 +365,7 @@ QPushButton:hover{text-decoration: underline;}</string>
      <string notr="true">QLabel{
     color: #000000;
     font-family: &quot;Inter&quot;;
-    font-size: 14px;
+    font-size: 16px;
     font-weight: 500;
 
 }</string>
@@ -403,9 +380,9 @@ QPushButton:hover{text-decoration: underline;}</string>
    <widget class="QLabel" name="label_3">
     <property name="geometry">
      <rect>
-      <x>690</x>
-      <y>270</y>
-      <width>81</width>
+      <x>460</x>
+      <y>430</y>
+      <width>91</width>
       <height>21</height>
      </rect>
     </property>
@@ -413,7 +390,7 @@ QPushButton:hover{text-decoration: underline;}</string>
      <string notr="true">QLabel{
     color: #000000;
     font-family: &quot;Inter&quot;;
-    font-size: 14px;
+    font-size: 16px;
     font-weight: 500;
 
 }</string>
@@ -422,14 +399,14 @@ QPushButton:hover{text-decoration: underline;}</string>
      <string>Username:</string>
     </property>
     <property name="alignment">
-     <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+     <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
     </property>
    </widget>
    <widget class="QLabel" name="label_4">
     <property name="geometry">
      <rect>
-      <x>690</x>
-      <y>300</y>
+      <x>820</x>
+      <y>430</y>
       <width>81</width>
       <height>21</height>
      </rect>
@@ -438,7 +415,7 @@ QPushButton:hover{text-decoration: underline;}</string>
      <string notr="true">QLabel{
     color: #000000;
     font-family: &quot;Inter&quot;;
-    font-size: 14px;
+    font-size: 16px;
     font-weight: 500;
 
 }</string>
@@ -447,113 +424,99 @@ QPushButton:hover{text-decoration: underline;}</string>
      <string>Password:</string>
     </property>
     <property name="alignment">
-     <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+     <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
     </property>
    </widget>
    <widget class="QLabel" name="boxlabel_name">
     <property name="geometry">
      <rect>
-      <x>780</x>
-      <y>200</y>
-      <width>171</width>
-      <height>20</height>
+      <x>460</x>
+      <y>290</y>
+      <width>211</width>
+      <height>31</height>
      </rect>
     </property>
     <property name="styleSheet">
      <string notr="true">QLabel{
+border: 1px solid rgba(0, 0, 0, 1); 
+border-radius: 2px;
+background-color: rgb(247, 247, 247);
 padding-left: 5px;
-font-family: &quot;Inter&quot;;
-font-size: 12px;
-font-weight: 500;
+font-family: &quot;Roboto&quot;;
+font-size: 16px;
+font-weight: 400;
 }</string>
     </property>
     <property name="text">
-     <string/>
+     <string>John Mark Gimena</string>
     </property>
    </widget>
    <widget class="QLabel" name="boxlabel_role">
     <property name="geometry">
      <rect>
-      <x>780</x>
-      <y>230</y>
-      <width>171</width>
-      <height>20</height>
+      <x>820</x>
+      <y>290</y>
+      <width>211</width>
+      <height>31</height>
      </rect>
     </property>
     <property name="styleSheet">
      <string notr="true">QLabel{
+border: 1px solid rgba(0, 0, 0, 1); 
+border-radius: 2px;
+background-color: rgb(247, 247, 247);
 padding-left: 5px;
-font-family: &quot;Inter&quot;;
-font-size: 12px;
-font-weight: 500;
+font-family: &quot;Roboto&quot;;
+font-size: 16px;
+font-weight: 400;
 }</string>
     </property>
     <property name="text">
-     <string/>
+     <string>Admin</string>
     </property>
    </widget>
    <widget class="QLabel" name="boxlabel_username">
     <property name="geometry">
      <rect>
-      <x>780</x>
-      <y>270</y>
-      <width>121</width>
-      <height>20</height>
+      <x>460</x>
+      <y>455</y>
+      <width>211</width>
+      <height>31</height>
      </rect>
     </property>
     <property name="styleSheet">
      <string notr="true">QLabel{
+border: 1px solid rgba(0, 0, 0, 1); 
+border-radius: 2px;
+background-color: rgb(247, 247, 247);
 padding-left: 5px;
-background-color: #E7E7E7;
-border: 1px solid rgba(0, 0, 0, 0.3); 
-font-family: &quot;Inter&quot;;
-font-size: 12px;
-font-weight: 500;
+font-family: &quot;Roboto&quot;;
+font-size: 16px;
+font-weight: 400;
 }</string>
     </property>
     <property name="text">
      <string/>
     </property>
    </widget>
-   <widget class="QLabel" name="image">
-    <property name="geometry">
-     <rect>
-      <x>420</x>
-      <y>170</y>
-      <width>210</width>
-      <height>200</height>
-     </rect>
-    </property>
-    <property name="styleSheet">
-     <string notr="true">border:1px solid black;</string>
-    </property>
-    <property name="text">
-     <string/>
-    </property>
-    <property name="pixmap">
-     <pixmap resource="../resource.qrc">:/icon/icons/placeholder.jpg</pixmap>
-    </property>
-    <property name="scaledContents">
-     <bool>true</bool>
-    </property>
-   </widget>
    <widget class="QLineEdit" name="password">
     <property name="geometry">
      <rect>
-      <x>780</x>
-      <y>300</y>
-      <width>121</width>
-      <height>20</height>
+      <x>820</x>
+      <y>455</y>
+      <width>211</width>
+      <height>31</height>
      </rect>
     </property>
     <property name="styleSheet">
      <string notr="true">QLineEdit{
+border: 1px solid rgba(0, 0, 0, 1); 
+border-radius: 2px;
+background-color: rgb(247, 247, 247);
 padding-left: 5px;
-background-color: #E7E7E7;
-border: 1px solid rgba(0, 0, 0, 0.3); 
-font-family: &quot;Inter&quot;;
-font-size: 10px;
-font-weight: 500;
+font-family: &quot;Roboto&quot;;
+font-size: 16px;
+font-weight: 400;
 }</string>
     </property>
     <property name="echoMode">
@@ -593,7 +556,7 @@ font-weight: 500;
      <rect>
       <x>180</x>
       <y>280</y>
-      <width>131</width>
+      <width>121</width>
       <height>31</height>
      </rect>
     </property>
@@ -981,17 +944,304 @@ background-color: rgba(255, 167, 25, 0.1);
      <string>Settings</string>
     </property>
    </widget>
+   <widget class="QLabel" name="whitebg_2">
+    <property name="geometry">
+     <rect>
+      <x>362</x>
+      <y>82</y>
+      <width>821</width>
+      <height>701</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background-color: rgba(0, 0, 0, 100);
+border-radius: 5px;  </string>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="Line" name="navline">
+    <property name="geometry">
+     <rect>
+      <x>390</x>
+      <y>240</y>
+      <width>770</width>
+      <height>3</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">border:2px solid #FB9722 ;
+</string>
+    </property>
+    <property name="frameShadow">
+     <enum>QFrame::Plain</enum>
+    </property>
+    <property name="orientation">
+     <enum>Qt::Horizontal</enum>
+    </property>
+   </widget>
+   <widget class="Line" name="navline_2">
+    <property name="geometry">
+     <rect>
+      <x>390</x>
+      <y>410</y>
+      <width>770</width>
+      <height>3</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">border:2px solid #FB9722 ;
+</string>
+    </property>
+    <property name="frameShadow">
+     <enum>QFrame::Plain</enum>
+    </property>
+    <property name="orientation">
+     <enum>Qt::Horizontal</enum>
+    </property>
+   </widget>
+   <widget class="QLabel" name="myprofileshadow">
+    <property name="geometry">
+     <rect>
+      <x>472</x>
+      <y>111</y>
+      <width>171</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QLabel{
+    color:rgba(0,0,0, .4);
+    font-family: 'Inter';
+    font-size: 34px;
+    font-weight: bold;
+}</string>
+    </property>
+    <property name="text">
+     <string>My Profile</string>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignCenter</set>
+    </property>
+   </widget>
+   <widget class="QLabel" name="title_3">
+    <property name="geometry">
+     <rect>
+      <x>-1</x>
+      <y>11</y>
+      <width>1201</width>
+      <height>71</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QLabel{
+color: rgba(0, 0, 0, 80);
+    font-family: Sacramento;
+    font-size: 58px;
+    font-weight: 400;
+    padding-bottom: 5px;
+    text-align: center;
+}
+</string>
+    </property>
+    <property name="text">
+     <string>Oriental Dua Restaurant</string>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignCenter</set>
+    </property>
+    <property name="wordWrap">
+     <bool>true</bool>
+    </property>
+   </widget>
+   <widget class="QLabel" name="basicinfo">
+    <property name="geometry">
+     <rect>
+      <x>390</x>
+      <y>198</y>
+      <width>251</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QLabel{
+    color: #000000;
+    font-family: 'Inter';
+    font-size: 28px;
+    font-weight: bold;
+}</string>
+    </property>
+    <property name="text">
+     <string>Basic Information:</string>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignCenter</set>
+    </property>
+   </widget>
+   <widget class="QLabel" name="logininfoshadow">
+    <property name="geometry">
+     <rect>
+      <x>390</x>
+      <y>370</y>
+      <width>251</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QLabel{
+    color: #000000;
+    font-family: 'Inter';
+    font-size: 28px;
+    font-weight: bold;
+}</string>
+    </property>
+    <property name="text">
+     <string>Login Information:</string>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignCenter</set>
+    </property>
+   </widget>
+   <widget class="QLabel" name="basicinfoshadow">
+    <property name="geometry">
+     <rect>
+      <x>391</x>
+      <y>199</y>
+      <width>251</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QLabel{
+    color:rgba(0,0,0, .4);
+    font-family: 'Inter';
+    font-size: 28px;
+    font-weight: bold;
+}</string>
+    </property>
+    <property name="text">
+     <string>Basic Information:</string>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignCenter</set>
+    </property>
+   </widget>
+   <widget class="QLabel" name="logininfo">
+    <property name="geometry">
+     <rect>
+      <x>390</x>
+      <y>371</y>
+      <width>251</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QLabel{
+    color:rgba(0,0,0, .4);
+    font-family: 'Inter';
+    font-size: 28px;
+    font-weight: bold;
+}</string>
+    </property>
+    <property name="text">
+     <string>Login Information:</string>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignCenter</set>
+    </property>
+   </widget>
+   <widget class="QLabel" name="profileimg">
+    <property name="geometry">
+     <rect>
+      <x>390</x>
+      <y>100</y>
+      <width>71</width>
+      <height>71</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QLabel{
+    color: #000000;
+    font-family: 'Inter';
+    font-size: 34px;
+    font-weight: bold;
+}</string>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+    <property name="pixmap">
+     <pixmap resource="../resource.qrc">:/icon/icons/cresume.png</pixmap>
+    </property>
+    <property name="scaledContents">
+     <bool>true</bool>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignCenter</set>
+    </property>
+   </widget>
+   <widget class="QLabel" name="viewpassword">
+    <property name="geometry">
+     <rect>
+      <x>1006</x>
+      <y>460</y>
+      <width>21</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QLabel{
+    color: #000000;
+    font-family: 'Inter';
+    font-size: 34px;
+    font-weight: bold;
+}</string>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+    <property name="pixmap">
+     <pixmap resource="../resource.qrc">:/icon/icons/view.png</pixmap>
+    </property>
+    <property name="scaledContents">
+     <bool>true</bool>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignCenter</set>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="editbtn">
+    <property name="geometry">
+     <rect>
+      <x>1006</x>
+      <y>460</y>
+      <width>21</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">border:none;</string>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+    <property name="iconSize">
+     <size>
+      <width>35</width>
+      <height>35</height>
+     </size>
+    </property>
+   </widget>
+   <zorder>whitebg_2</zorder>
    <zorder>sidebar</zorder>
    <zorder>titlebar</zorder>
    <zorder>whitebg</zorder>
-   <zorder>title</zorder>
    <zorder>settings</zorder>
    <zorder>userprofIcon</zorder>
    <zorder>logoutbtn</zorder>
    <zorder>logoutIcon</zorder>
    <zorder>userprofbtn</zorder>
-   <zorder>editbtn</zorder>
-   <zorder>settings_2</zorder>
    <zorder>label</zorder>
    <zorder>appearanceIcon</zorder>
    <zorder>appearancebtn</zorder>
@@ -1001,7 +1251,6 @@ background-color: rgba(255, 167, 25, 0.1);
    <zorder>boxlabel_name</zorder>
    <zorder>boxlabel_role</zorder>
    <zorder>boxlabel_username</zorder>
-   <zorder>image</zorder>
    <zorder>password</zorder>
    <zorder>usersIcon</zorder>
    <zorder>usersbtn</zorder>
@@ -1016,6 +1265,19 @@ background-color: rgba(255, 167, 25, 0.1);
    <zorder>label_5</zorder>
    <zorder>settingIcon</zorder>
    <zorder>settingsbtn</zorder>
+   <zorder>navline</zorder>
+   <zorder>navline_2</zorder>
+   <zorder>myprofileshadow</zorder>
+   <zorder>myprofile</zorder>
+   <zorder>title_3</zorder>
+   <zorder>title</zorder>
+   <zorder>basicinfo</zorder>
+   <zorder>logininfoshadow</zorder>
+   <zorder>basicinfoshadow</zorder>
+   <zorder>logininfo</zorder>
+   <zorder>profileimg</zorder>
+   <zorder>viewpassword</zorder>
+   <zorder>editbtn</zorder>
   </widget>
  </widget>
  <resources>
