--- a/Project SE/ui/settingscreen.ui
+++ b/Project SE/ui/settingscreen.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>1200</width>
-    <height>796</height>
+    <height>800</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -94,7 +94,7 @@ border-radius: 5px;  </string>
      <string notr="true">QLabel#title{
 	color: #FB9722;
     font-family: Sacramento;
-    font-size: 52px;
+    font-size: 58px;
     font-weight: 400;
     padding-bottom: 5px;
     text-align: center;
@@ -123,7 +123,7 @@ border-radius: 5px;  </string>
      <string notr="true">QLabel#settings{
     color: #000000;
     font-family: 'Roboto';
-    font-size: 22px;
+    font-size: 23px;
     font-weight: 500;
 }</string>
     </property>
@@ -684,7 +684,7 @@ QPushButton:hover{text-decoration: underline;}</string>
      <rect>
       <x>180</x>
       <y>280</y>
-      <width>131</width>
+      <width>121</width>
       <height>31</height>
      </rect>
     </property>
@@ -745,10 +745,39 @@ QPushButton:hover{text-decoration: underline;}</string>
      <string/>
     </property>
    </widget>
+   <widget class="QLabel" name="title_3">
+    <property name="geometry">
+     <rect>
+      <x>-1</x>
+      <y>11</y>
+      <width>1201</width>
+      <height>71</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QLabel{
+color: rgba(0, 0, 0, 80);
+    font-family: Sacramento;
+    font-size: 58px;
+    font-weight: 400;
+    padding-bottom: 5px;
+    text-align: center;
+}
+</string>
+    </property>
+    <property name="text">
+     <string>Oriental Dua Restaurant</string>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignCenter</set>
+    </property>
+    <property name="wordWrap">
+     <bool>true</bool>
+    </property>
+   </widget>
    <zorder>sidebar</zorder>
    <zorder>titlebar</zorder>
    <zorder>whitebg</zorder>
-   <zorder>title</zorder>
    <zorder>settings</zorder>
    <zorder>userprofIcon</zorder>
    <zorder>appearanceIcon</zorder>
@@ -770,6 +799,8 @@ QPushButton:hover{text-decoration: underline;}</string>
    <zorder>label_2</zorder>
    <zorder>settingIcon</zorder>
    <zorder>settingsbtn</zorder>
+   <zorder>title_3</zorder>
+   <zorder>title</zorder>
   </widget>
  </widget>
  <resources>
