--- a/Project SE/ui/settingscreenforcashier.ui
+++ b/Project SE/ui/settingscreenforcashier.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>1200</width>
-    <height>796</height>
+    <height>800</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -94,7 +94,7 @@ border-radius: 5px;  </string>
      <string notr="true">QLabel#title{
 	color: #FB9722;
     font-family: Sacramento;
-    font-size: 52px;
+    font-size: 58px;
     font-weight: 400;
     padding-bottom: 5px;
     text-align: center;
@@ -123,7 +123,7 @@ border-radius: 5px;  </string>
      <string notr="true">QLabel#settings{
     color: #000000;
     font-family: 'Roboto';
-    font-size: 22px;
+    font-size: 23px;
     font-weight: 500;
 }</string>
     </property>
@@ -159,20 +159,98 @@ border-radius: 5px;  </string>
      <set>Qt::AlignCenter</set>
     </property>
    </widget>
+   <widget class="QLabel" name="appearanceIcon">
+    <property name="geometry">
+     <rect>
+      <x>140</x>
+      <y>220</y>
+      <width>35</width>
+      <height>35</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true"/>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+    <property name="pixmap">
+     <pixmap resource="../resource.qrc">:/icon/icons/appearance.png</pixmap>
+    </property>
+    <property name="scaledContents">
+     <bool>true</bool>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignCenter</set>
+    </property>
+   </widget>
    <widget class="QPushButton" name="logoutbtn">
     <property name="geometry">
      <rect>
-      <x>5</x>
+      <x>15</x>
       <y>750</y>
-      <width>101</width>
+      <width>81</width>
       <height>31</height>
      </rect>
     </property>
     <property name="styleSheet">
      <string notr="true">QPushButton{
     color: rgba(0,0,0, 0.5);
-    font-family: 'Roboto';
-    font-size: 12px;
+    font-family: 'Inter';
+    font-size: 13px;
+    font-weight: 500;
+	border:none;
+}
+
+QPushButton:hover{
+color: #FB9722;
+border: 2px solid #FB9722;
+border-radius: 8px;
+background-color: rgba(255, 167, 25, 0.1);
+}
+</string>
+    </property>
+    <property name="text">
+     <string>Logout</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="settingsbtn">
+    <property name="geometry">
+     <rect>
+      <x>15</x>
+      <y>670</y>
+      <width>81</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QPushButton{
+    color: #FB9722;;
+    font-family: 'Inter';
+    font-size: 13px;
+    font-weight: 500;
+	border:none;
+}
+</string>
+    </property>
+    <property name="text">
+     <string>Settings</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="homebtn">
+    <property name="geometry">
+     <rect>
+      <x>15</x>
+      <y>140</y>
+      <width>81</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QPushButton{
+    color: rgba(0,0,0, 0.5);
+    font-family: 'Inter';
+    font-size: 13px;
     font-weight: 500;
 	border:none;
 }
@@ -185,46 +263,23 @@ background-color: rgba(255, 167, 25, 0.1);
 }</string>
     </property>
     <property name="text">
-     <string>Logout</string>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="settingsbtn">
-    <property name="geometry">
-     <rect>
-      <x>5</x>
-      <y>616</y>
-      <width>101</width>
-      <height>31</height>
-     </rect>
-    </property>
-    <property name="styleSheet">
-     <string notr="true">QPushButton{
-  	color: #FB9722;
-    font-family: 'Roboto';
-    font-size: 12px;
-    font-weight: 500;
-	border:none;
-}
-</string>
-    </property>
-    <property name="text">
-     <string>Settings</string>
+     <string>Home</string>
     </property>
    </widget>
    <widget class="QPushButton" name="menubtn">
     <property name="geometry">
      <rect>
-      <x>10</x>
-      <y>150</y>
-      <width>91</width>
+      <x>15</x>
+      <y>220</y>
+      <width>81</width>
       <height>31</height>
      </rect>
     </property>
     <property name="styleSheet">
      <string notr="true">QPushButton{
     color: rgba(0,0,0, 0.5);
-    font-family: 'Roboto';
-    font-size: 12px;
+    font-family: 'Inter';
+    font-size: 13px;
     font-weight: 500;
 	border:none;
 }
@@ -244,7 +299,7 @@ background-color: rgba(255, 167, 25, 0.1);
     <property name="geometry">
      <rect>
       <x>40</x>
-      <y>120</y>
+      <y>190</y>
       <width>30</width>
       <height>30</height>
      </rect>
@@ -282,11 +337,53 @@ background-color: rgba(255, 167, 25, 0.1);
      <set>Qt::AlignCenter</set>
     </property>
    </widget>
+   <widget class="QLabel" name="homeIcon">
+    <property name="geometry">
+     <rect>
+      <x>40</x>
+      <y>110</y>
+      <width>30</width>
+      <height>30</height>
+     </rect>
+    </property>
+    <property name="minimumSize">
+     <size>
+      <width>30</width>
+      <height>30</height>
+     </size>
+    </property>
+    <property name="maximumSize">
+     <size>
+      <width>35</width>
+      <height>35</height>
+     </size>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QLabel#Pmanagementbtn{
+    color: rgba(0,0,0, 0.5);
+    font-family: 'Roboto';
+    font-size: 11px;
+    font-weight: 300;
+}</string>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+    <property name="pixmap">
+     <pixmap resource="../resource.qrc">:/icon/icons/home.png</pixmap>
+    </property>
+    <property name="scaledContents">
+     <bool>true</bool>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignCenter</set>
+    </property>
+   </widget>
    <widget class="QLabel" name="settingIcon">
     <property name="geometry">
      <rect>
-      <x>38</x>
-      <y>580</y>
+      <x>39</x>
+      <y>634</y>
       <width>35</width>
       <height>35</height>
      </rect>
@@ -327,7 +424,7 @@ background-color: rgba(255, 167, 25, 0.1);
    <widget class="QLabel" name="logoutIcon">
     <property name="geometry">
      <rect>
-      <x>38</x>
+      <x>39</x>
       <y>715</y>
       <width>35</width>
       <height>35</height>
@@ -384,59 +481,10 @@ background-color: rgba(255, 167, 25, 0.1);
 	border:none;
 }
 
-QPushButton:hover{text-decoration: underline;}
-
-</string>
+QPushButton:hover{text-decoration: underline;}</string>
     </property>
     <property name="text">
      <string>Users Profile</string>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="editbtn">
-    <property name="geometry">
-     <rect>
-      <x>1030</x>
-      <y>120</y>
-      <width>51</width>
-      <height>41</height>
-     </rect>
-    </property>
-    <property name="styleSheet">
-     <string notr="true">border:none;</string>
-    </property>
-    <property name="text">
-     <string/>
-    </property>
-    <property name="iconSize">
-     <size>
-      <width>35</width>
-      <height>35</height>
-     </size>
-    </property>
-   </widget>
-   <widget class="QLabel" name="appearanceIcon">
-    <property name="geometry">
-     <rect>
-      <x>140</x>
-      <y>220</y>
-      <width>35</width>
-      <height>35</height>
-     </rect>
-    </property>
-    <property name="styleSheet">
-     <string notr="true"/>
-    </property>
-    <property name="text">
-     <string/>
-    </property>
-    <property name="pixmap">
-     <pixmap resource="../resource.qrc">:/icon/icons/appearance.png</pixmap>
-    </property>
-    <property name="scaledContents">
-     <bool>true</bool>
-    </property>
-    <property name="alignment">
-     <set>Qt::AlignCenter</set>
     </property>
    </widget>
    <widget class="QPushButton" name="appearancebtn">
@@ -463,13 +511,35 @@ QPushButton:hover{text-decoration: underline;}</string>
      <string>Appearance</string>
     </property>
    </widget>
+   <widget class="QPushButton" name="editbtn">
+    <property name="geometry">
+     <rect>
+      <x>1030</x>
+      <y>120</y>
+      <width>51</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">border:none;</string>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+    <property name="iconSize">
+     <size>
+      <width>35</width>
+      <height>35</height>
+     </size>
+    </property>
+   </widget>
    <widget class="QLabel" name="label_2">
     <property name="geometry">
      <rect>
-      <x>10</x>
-      <y>570</y>
-      <width>91</width>
-      <height>81</height>
+      <x>15</x>
+      <y>625</y>
+      <width>81</width>
+      <height>76</height>
      </rect>
     </property>
     <property name="styleSheet">
@@ -483,23 +553,56 @@ QPushButton:hover{text-decoration: underline;}</string>
      <string/>
     </property>
    </widget>
+   <widget class="QLabel" name="title_3">
+    <property name="geometry">
+     <rect>
+      <x>-1</x>
+      <y>11</y>
+      <width>1201</width>
+      <height>71</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QLabel{
+color: rgba(0, 0, 0, 80);
+    font-family: Sacramento;
+    font-size: 58px;
+    font-weight: 400;
+    padding-bottom: 5px;
+    text-align: center;
+}
+</string>
+    </property>
+    <property name="text">
+     <string>Oriental Dua Restaurant</string>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignCenter</set>
+    </property>
+    <property name="wordWrap">
+     <bool>true</bool>
+    </property>
+   </widget>
    <zorder>sidebar</zorder>
    <zorder>titlebar</zorder>
    <zorder>whitebg</zorder>
-   <zorder>title</zorder>
    <zorder>settings</zorder>
    <zorder>userprofIcon</zorder>
+   <zorder>appearanceIcon</zorder>
    <zorder>logoutbtn</zorder>
+   <zorder>homebtn</zorder>
    <zorder>menubtn</zorder>
    <zorder>menuIcon</zorder>
+   <zorder>homeIcon</zorder>
    <zorder>logoutIcon</zorder>
    <zorder>userprofbtn</zorder>
-   <zorder>editbtn</zorder>
-   <zorder>appearanceIcon</zorder>
    <zorder>appearancebtn</zorder>
+   <zorder>editbtn</zorder>
    <zorder>label_2</zorder>
    <zorder>settingIcon</zorder>
    <zorder>settingsbtn</zorder>
+   <zorder>title_3</zorder>
+   <zorder>title</zorder>
   </widget>
  </widget>
  <resources>
