--- a/Project SE/ui/loginscreen.ui
+++ b/Project SE/ui/loginscreen.ui
@@ -188,18 +188,18 @@ color: rgb(255, 0, 0);</string>
   <widget class="QLabel" name="subtitle">
    <property name="geometry">
     <rect>
-     <x>700</x>
+     <x>720</x>
      <y>210</y>
-     <width>291</width>
+     <width>261</width>
      <height>71</height>
     </rect>
    </property>
    <property name="styleSheet">
     <string notr="true">QLabel#subtitle{
 	color: #EA7000;
-    font-family: Outfit;
-    font-size: 28px;
-    font-weight: 100;
+    font-family: 'Roboto';
+    font-size: 26px;
+    font-weight: 400;
     padding-bottom: 5px;
     text-align: center
 }</string>
@@ -220,8 +220,8 @@ color: rgb(255, 0, 0);</string>
   <widget class="QLabel" name="note">
    <property name="geometry">
     <rect>
-     <x>430</x>
-     <y>630</y>
+     <x>428</x>
+     <y>600</y>
      <width>341</width>
      <height>81</height>
     </rect>
@@ -383,6 +383,32 @@ color: rgb(255, 0, 0);</string>
     <string/>
    </property>
   </widget>
+  <widget class="QLabel" name="label_7">
+   <property name="geometry">
+    <rect>
+     <x>1140</x>
+     <y>770</y>
+     <width>51</width>
+     <height>21</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">QLabel{
+   
+	color: rgba(0, 0, 0, .35);
+    font-family: &quot;Roboto&quot;;
+    font-size: 17px;
+    font-weight: 400;
+
+}</string>
+   </property>
+   <property name="text">
+    <string>V.03</string>
+   </property>
+   <property name="alignment">
+    <set>Qt::AlignCenter</set>
+   </property>
+  </widget>
   <zorder>label_3</zorder>
   <zorder>label_2</zorder>
   <zorder>title</zorder>
@@ -398,6 +424,7 @@ color: rgb(255, 0, 0);</string>
   <zorder>passwordfield</zorder>
   <zorder>password_icon</zorder>
   <zorder>line_2</zorder>
+  <zorder>label_7</zorder>
  </widget>
  <resources>
   <include location="../resource.qrc"/>
